--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "tsc-watch": "^6.2.0",
     "typescript": "^5.5.2"
   },
   "dependencies": {
