--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@aws-sdk/client-s3": "^3.705.0",
+    "@aws-sdk/s3-request-presigner": "^3.705.0",
     "@prisma/client": "^5.16.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
