--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "@aws-sdk/client-s3": "^3.705.0",
     "@aws-sdk/s3-request-presigner": "^3.705.0",
     "@prisma/client": "^5.16.1",
+    "@types/cookie-parser": "^1.4.8",
     "axios": "^1.7.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
