--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.3",
